# rust-stm32f415

./: .gitignore  Cargo.toml  LICENSE.md  README.md  STM32F415XX_FLASH.ld  VSCODE_EXTENSIONS.md  black_magic_probe_flash.scr  build.rs  clippy.toml  device_STM32F415.x  flasher.py  linker.ld  linker_low_stack.ld  memory.x  rust-stm32F415.code-workspace  vector_STM32F415.txt
.cargo/: config.toml
cpp_src/c-stm32f415rgt6/: .cproject  .mxproject  .project  STM32F415RGTX_FLASH.ld  STM32F415RGTX_RAM.ld  c-stm32f415rgt6.ioc
cpp_src/c-stm32f415rgt6/Core/Inc/: main.h  stm32f4xx_hal_conf.h
cpp_src/c-stm32f415rgt6/Core/Src/: main.c  stm32f4xx_hal_msp.c
doc/: how_to_cpp_ffi.md  how_to_svd2rust_to_PAC.md  howto_detailed_setup.md
src/: main-stack-guard.rs  main.rs  startup_stm32f415.rs  startup_stm32g431.rs
